<resources>
    <string name="app_name">Crepes &amp; Waffles</string>
    <string name="title_activity_main2">Crepes &amp; Waffles</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario1</string>
    <string name="nav_header_subtitle">Gracias por preferirnos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerrar sesión</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="menu">Menú</string>
    <string name="localizar">Localízanos</string>
    <string name="sugerencias">Sugerencias del día</string>
    <string name="locales">¿Dónde estás?</string>
    <string name="localizacion">Selecciona ubicarme para encontrar nuestros restaurantes más cercanos de ti</string>
    <string name="reservar">Reservas</string>
    <string name="calificar">Calificaciones</string>
    <string name="salir">Cerrar sesión</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="correo">Usuario</string>
    <string name="contraseña">Contraseña</string>
    <string name="aviso_crear">¿Aún no tienes cuenta? Crea una</string>
    <string name="registro">REGISTRO</string>
    <string name="email">Correo Electrónico</string>
    <string name="passmin">Mínimo 6 dígitos</string>
    <string name="comcontraseña">Confirme su contraseña</string>
    <string name="loaduser">Ingrese el correo registrado</string>
    <string name="samepass">Repita contraseña </string>



</resources>
