<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_localizar"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/localizar" />
        <item
            android:id="@+id/nav_reservar"
            android:icon="@drawable/ic_phone_black_24dp"
            android:title="@string/reservar" />
        <item
            android:id="@+id/nav_calificar"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/calificar" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/salir" />

    </group>



</menu>
